fix: Fix a bug that would cause layout issues on vertical desktop screens

--- a/app/assets/styles/responsiveness.css
+++ b/app/assets/styles/responsiveness.css
@@ -12,7 +12,7 @@
     max-width: calc(var(--max-content-width));
     transition: margin padding var(--sidebar-transition-time) ease !important;
     padding-left: max(
-      calc(100vh - var(--max-content-width) + var(--global-padding)),
+      calc(100vw - var(--max-content-width) + var(--global-padding)),
       calc(var(--sidebar-width) + var(--global-padding))
     );
     padding-bottom: 8rem;
